<resources >
    <string name="app_name">CosmosApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_take_phote">TakePhoteActivity</string>
    <string name="title_activity_show_croppered">ShowCropperedActivity</string>
    
    <string name="home_page_name">首页</string>
    <string name="tab_home">主页</string>
    <string name="tab_classify">分类</string>
    <string name="tab_discover">发现</string>
    <string name="tab_me">我的</string>



    <string name="hint_operator_name">你好</string>
    <string name="hello">Hello World, Date!</string>

    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="cancel">取 消</string>
    <string name="account_empty">用户名为空，请重新输入！</string>
    <string name="pwd_empty">密码为空，请重新输入！</string>
    <string name="pwd_not_fit_user">密码不正确，请重新输入！</string>
    <string name="pwd_new_empty">新密码为空，请重新输入！</string>
    <string name="pwd_check_empty">密码确认为空，请重新输入！</string>
    <string name="pwd_not_the_same">密码确认不正确，请重新输入密码！</string>
    <string name="register_fail">注册用户失败，请重新尝试！</string>
    <string name="register_success">注册成功！</string>
    <string name="resetpwd_fail">密码修改失败，请重新尝试！</string>
    <string name="resetpwd_success">密码修改成功！</string>
    <string name="login_success">登陆成功！</string>
    <string name="cancel_success">注销成功！</string>
    <string name="login_fail">登录失败！请输入正确的用户名与密码！</string>
    <string name="cancel_fail">注销失败！请输入正确的用户名与密码！</string>

    <string name="name_already_exist">用户名已存在，请重新输入！</string>
    <string name="name_not_exist">用户名不存在，请重新输入！</string>
    <string name="user_login_success">用户登录，欢迎光临！</string>



    <!--FB 发现页面-->
    <string name="ch">汉</string>
    <string name="en">En</string>
    <string name="hot">热门:</string>
    <string name="word_search">单词搜索</string>
    <string name="high_frequency_word">高频词:</string>
    <string name="ch_composition">语文作文</string>
    <string name="composition_search">作文搜索</string>
    <string name="english_composition">英文作文</string>

    <string name="composition_search_hint">搜索你感兴趣的文章吧</string>
    <string name="excellent">优</string>
    <string name="word_lookup_hint">输入你不会的单词搜索吧</string>
    <string name="hot_words">热词推荐</string>
    <string name="intelligence_competition">脑力竞技场</string>
    <string name="slogan">勇攀智慧之峰，角逐脑力之王</string>
    <string name="composition_search_text">作文搜索</string>
    <string name="excellent_composition">精选优秀文章</string>
    <string name="word_lookup">单词查询</string>

</resources>
