<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/layout_bg"
    tools:context="com.fudan.cosmosapp.ui.discover.FB_Composition_Activity">

    <!--搜索栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/composition_search_text"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:gravity="center"/>

        <!--android:background="@drawable/fb_composition_search_corner"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/fb_composition_search_corner"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/ed_query"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="7"
                android:background="@null"
                android:hint="@string/composition_search_hint"
                android:textColor="?attr/text_cl"
                android:textColorHint="?attr/text_hint_cl"
                android:textSize="18dp" />

            <ImageButton
                android:id="@+id/ch_composition_search_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:src="@android:drawable/ic_search_category_default" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="1dp"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/excellent_composition"
            android:padding="10dp"
            android:textSize="14dp"
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/background_dark"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <!--文章推荐列表-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:paddingTop="16dp"
            android:clipToPadding="false"
            >

        </android.support.v7.widget.RecyclerView>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tv_des"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="加载异常"/>
    </RelativeLayout>



</LinearLayout>
